<resources>
    <string name="app_name">salud</string>
    <string name="correo">Correo: </string>
    <string name="nombre">Nombre: </string>
    <string name="edad">Edad: </string>
    <string name="peso">Peso: </string>
    <string name="altura">Altura: </string>
    <string name="imc">IMC:</string>
    <string name="men_principal">Menú Principal</string>
    <string name="estado_usuario">Estado Usuario</string>
    <string name="calculadora_imc">Calculadora IMC</string>
    <string name="registrar_usuarios">Registrar Usuarios</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="modificar_usuario">Modificar Usuario</string>
</resources>