<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="100dp"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Consultar Usuario"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0"
        android:orientation="horizontal">


        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/stylo_borde_textview"/>

        <TextView
            android:id="@+id/tvNombrefijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textPersonName"
            android:textColor="#333333"
            android:background="@drawable/stylo_borde_textview"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="@drawable/stylo_borde_textview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCorreofijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:background="@drawable/stylo_borde_textview"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            tools:ignore="ExtraText" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.divider.MaterialDivider>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0"

        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/stylo_borde_textview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEdadfijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_borde_textview"
            android:gravity="start"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0"
        android:orientation="horizontal">


        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:background="@drawable/stylo_borde_textview"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPesofijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_borde_textview"
            android:gravity="start"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0"
        android:orientation="horizontal">


        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textAlignment="center"
            android:background="@drawable/stylo_borde_textview"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAlturafijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_borde_textview"
            android:gravity="start"

            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0"
        android:orientation="horizontal">


        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="IMC:"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:background="@drawable/stylo_borde_textview"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_borde_textview"
            android:gravity="start"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>
